have increased ram args passing to java process
git-svn-id: https://code.doit.wisc.edu/svn/at-default/ls/CoolIt/trunk@6325 d64d4213-cb0a-0410-9606-839883b54457