@@ -39,7 +39,7 @@
 	
 	<!-- :::::: compile with mxmlc.jar :::::: -->
 	<target name="compile">
-		<java jar="${mxmlc.jar}" fork="true" failonerror="true">
+		<java jar="${mxmlc.jar}" fork="true" failonerror="true" jvmargs="-Xms512m -Xmx800m -XX:PermSize=256m -XX:MaxPermSize=384m">
 			<arg value="-debug=true" />
 			<arg value="-verbose-stacktraces=true" />
 			<arg value="-default-frame-rate=31" />
